# WIR

./: AWIRecognition.cpp  AWIRecognition.h  CMakeLists.txt  SIF01.cpp  SIF0L.cpp  WIR01.cpp  WIR01.h  WIRDeamon.cpp  WIRServer.cpp  WIRStruct.h  WIR_OCR.cpp  WIR_OCR.h  WIR_clustering.cpp  WIR_clustering.h  os_type.h  stdafx.cpp  tester.cpp
